--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "homepage": "https://github.com/hitmon-gg/bots#readme",
   "dependencies": {
     "discord.js": "^13.7.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
